vector/templates/vector-block-sources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-block-sources
  labels:
    app: vector-block-sources
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vector-block-sources
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: vector-block-sources
        version: 1.0.0
    spec:
      volumes:
        - name: vector
          configMap:
            name: "vector-block-sources"
            defaultMode: 0700
            items:
            - key: vector
              path: vector.toml
      containers:
        - name: vector-block-sources
          image: "timberio/vector:0.11.0-debian"
          imagePullPolicy: Always
          args:
            - --config
            - /etc/vector/vector.toml
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: vector
              mountPath: /etc/vector/vector.toml
              subPath: vector.toml
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 128Mi
