vector/templates/vector-block-sources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-block-sources
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vector-block-sources
