vector/templates/vector-block-sources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vector-block-sources
spec:
  rules:
    - host: vector.docker.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: vector-block-sources
              servicePort: 80
